<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sajdah Counter</string>
    <string name="title_section1">Guide</string>
    <string name="title_section2">Settings</string>
    <string name="title_section3">About</string>
    <string name="action_settings">Settings</string>
    <string name="counter_start_value">0</string>
    <string name="sajdah_detection">Sajdah detection</string>
    <string name="vibrate_sajdah">Vibrate on sajdah detection</string>
    <string name="vibrate_sajdah_summary">Breifly vibrate the phone when a sajdah detected by the app.</string>
    <string name="brightness_sajdah">Reduce brightness of screen</string>
    <string name="brightness_sajdah_summary">Dim the screen brightness, only temporarily increase screen brightness when a sajdah is detected.</string>
    <string name="misc_pref">Other settings</string>
    <string name="use_full_screen">Fullscreen</string>
    <string name="use_full_screen_summary">Hides the titlebar, reduces distractions. Changing this setting will work next time you start the application.</string>
    <string name="about_para1">Sajdah counter helps you keep track of sajood during the prayer. This app is for people with attention problems, who have difficulty remembering the rakat.</string>
    <string name="how_to_use">How to use.</string>
    <string name="version">Version: </string>
</resources>
